--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 attrs==22.1.0
 autopep8==2.0.0
+build==0.9.0
 exceptiongroup==1.0.1
 flake8==5.0.4
 iniconfig==1.1.1
@@ -7,6 +8,7 @@ mccabe==0.7.0
 mypy==0.990
 mypy-extensions==0.4.3
 packaging==21.3
+pep517==0.13.0
 pluggy==1.0.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
