--- a/setup.cfg
+++ b/setup.cfg
@@ -25,10 +25,16 @@ keywords =
 
 [options]
 packages = find:
-package_dir =
-    =src
 python_requires = >=3.9.1
 include_package_data = True
+
+[options.packages.find]
+where = .
+include =
+    jestspectation
+    jestspectation.*
+exclude =
+    tests
 
 [options.packages.find]
 where = src
