Add better error presentation to support Pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ classifiers =
     Operating System :: OS Independent
     Development Status :: 4 - Beta
     Environment :: Other Environment
+    Framework :: Pytest
 keywords =
     jest
     pattern
@@ -35,3 +36,7 @@ include =
     jestspectation.*
 exclude =
     tests
+
+[project.entry_points]
+pytest11 =
+    jestspectation = jestspectation.pytest
