--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = Jestspectation
-version = 0.2.0
+version = 0.3.0
 author = Miguel Guthridge
 author_email = hdsq@outlook.com.au
-description = Pattern matching helper classes designed to be similar to Jest expect matchers, but modified to suit a Pythonic style of programming.
+description = Pattern matching helper classes designed to allow for testing of complex data structures in a readable and logical format.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/MiguelGuthridge/FL-Studio-Api-Stubs
