--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = Jestspectation
-version = 0.4.0
+version = 0.5.0
 author = Miguel Guthridge
 author_email = hdsq@outlook.com.au
 description = Pattern matching helper classes designed to allow for testing of complex data structures in a readable and logical format.
@@ -23,6 +23,7 @@ keywords =
     pattern
     matching
     pytest
+    equality
 
 [options]
 packages = find:
