--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 attrs==22.1.0
-autopep8==2.0.0
-build==0.9.0
-coverage==6.5.0
+autopep8==2.0.1
+build==0.10.0
+coverage==7.1.0
 exceptiongroup==1.0.1
-flake8==5.0.4
+flake8==6.0.0
 iniconfig==1.1.1
 mccabe==0.7.0
-mypy==0.990
+mypy==1.0.0
 mypy-extensions==0.4.3
 packaging==21.3
 pep517==0.13.0
 pluggy==1.0.0
-pycodestyle==2.9.1
-pyflakes==2.5.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
 pyparsing==3.0.9
-pytest==7.2.0
+pyproject_hooks==1.0.0
+pytest==7.2.1
 tomli==2.0.1
 typing_extensions==4.4.0
