--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,21 @@
+[tool.poetry]
+name = "Jestspectation"
+version = "0.9.1"
+description = "Pattern matching helper classes designed to allow for testing of complex data structures in a readable and logical format"
+authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
+license = "MIT"
+
+[tool.poetry.dependencies]
+python = "^3.9"
+typing-extensions = "^4.5.0"
+
+[tool.poetry.dev-dependencies]
+mypy = "^1.2.0"
+flake8 = "^6.0.0"
+pytest = "^7.3.1"
+autopep8 = "^2.0.2"
+coverage = "^7.2.3"
+
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
