--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,42 @@
 name = "Jestspectation"
 version = "0.9.1"
 description = "Pattern matching helper classes designed to allow for testing of complex data structures in a readable and logical format"
+readme = "README.md"
+
 authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
 license = "MIT"
+
+repository = "https://github.com/MiguelGuthridge/Jestspectation"
+documentation = "https://miguelguthridge.github.io/Jestspectation"
+
+keywords = [
+    "jest",
+    "pattern",
+    "matching",
+    "pytest",
+    "equality",
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Development Status :: 4 - Beta",
+    "Environment :: Other Environment",
+    "Framework :: Pytest",
+]
+include = ["py.typed"]
+
+packages = [
+    { include = "jestspectation" }
+]
+
+[tool.poetry.plugins."pytest11"]
+jestspectation = "jestspectation.pytest"
+
+[tool.poetry.urls]
+"Online Documentation" = "https://github.com/MiguelGuthridge/Jestspectation"
+"Bug Tracker" = "https://github.com/MiguelGuthridge/Jestspectation/issues"
 
 [tool.poetry.dependencies]
 python = "^3.9"
