Fix issue with duplicate pytest plugin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ packages = [
     { include = "jestspectation" }
 ]
 
-[tool.poetry.plugins."pytest11"]
+[tool.poetry.plugins.pytest11]
 jestspectation = "jestspectation.pytest"
 
 [tool.poetry.urls]
