--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Other Environment",
     "Framework :: Pytest",
+    "Topic :: Software Development :: Testing",
+    "Typing :: Typed",
 ]
 include = ["py.typed"]
 
