--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,12 @@ jestspectation = "jestspectation.pytest"
 [tool.poetry.dependencies]
 python = "^3.9"
 typing-extensions = "^4.5.0"
+mkdocs = "^1.5.2"
+mkdocs-gen-files = "^0.5.0"
+mkdocs-autorefs = "^0.5.0"
+mkdocs-material = "^9.1.21"
+mkdocs-material-extensions = "^1.1.1"
+mkdocstrings-python = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^1.4.1"
