--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Jestspectation"
-version = "1.2.0"
+version = "1.2.1"
 description = "Pattern matching tools to test complex data structures"
 readme = "README.md"
 
@@ -44,12 +44,6 @@ jestspectation = "jestspectation.pytest"
 [tool.poetry.dependencies]
 python = "^3.9"
 typing-extensions = "^4.5.0"
-mkdocs = "^1.5.2"
-mkdocs-gen-files = "^0.5.0"
-mkdocs-autorefs = "^0.5.0"
-mkdocs-material = "^9.1.21"
-mkdocs-material-extensions = "^1.1.1"
-mkdocstrings-python = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^1.5.0"
@@ -57,6 +51,10 @@ flake8 = "^6.1.0"
 pytest = "^7.4.0"
 autopep8 = "^2.0.2"
 coverage = "^7.3.0"
+mkdocs = "^1.4.2"
+mkdocs-gen-files = "^0.4.0"
+mkdocs-material = "^8.5.11"
+mkdocstrings = {version = "^0.20.0", extras = ["python"]}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
