--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,9 @@ jobs:
         python-version: 3.9
     - uses: Gr1N/setup-poetry@v9
     - if: always()
-      run: cat "/home/runner/work/Jestspectation/Jestspectation/poetry-installer-error-*.log"
+      run: |
+          ls "/home/runner/work/Jestspectation/Jestspectation/"
+          cat /home/runner/work/Jestspectation/Jestspectation/poetry-installer-error-*.log
     - uses: actions/cache@v5
       with:
         path: ~/.cache/pypoetry/virtualenvs
