--- a/.github/workflows/mkdocs-deploy.yml
+++ b/.github/workflows/mkdocs-deploy.yml
@@ -8,6 +8,7 @@ on:
 
 # Make sure deploy-pages has necessary permissions to deploy to GitHub Pages
 permissions:
+  contents: read
   pages: write
   id-token: write
 
@@ -24,33 +25,22 @@ jobs:
       name: github-pages
       url: ${{ steps.deploy.outputs.page_url }} # Output URL after the workflow has finished
     steps:
-      # Checkout repository including submodules
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v6
+      - uses: actions/checkout@v6
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
         with:
-          submodules: true
-
-      # Setup Python 3.9
-      - name: Setup Python
-        id: python
+          enable-cache: true
+      - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: '3.9'
-
-      # Install dependencies using Poetry
-      - uses: Gr1N/setup-poetry@v9
-      - uses: actions/cache@v5
-        with:
-            path: ~/.cache/pypoetry/virtualenvs
-            key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-      - run: poetry --version
-      - run: poetry install
+          # Pinned Python version
+          python-version-file: ".python-version"
+      - run: uv sync
 
       # Build documentation to ./site/ directory
       - name: Build Documentation
         id: build
-        run: poetry run mkdocs build
+        run: uv run mkdocs build
 
       # Upload artifact from the ./site/ directory using the expected format for GitHub Pages
       - name: Upload Artifact
